Javadoc für Maven Versuch 3

--- a/src/main/resources/doc-files/overview.html
+++ b/src/main/resources/doc-files/overview.html
@@ -3,7 +3,7 @@
 	<h1>SoftwareManagement-tode0009</h1>
 	<h2>Tolga Demirci</h2>
 
-<p><img src="rationaleZahlen.jpg"></p>
+<!-- <p><img src="rationaleZahlen.jpg"></p> -->
 
 <P>Rechnen mit Rationalen Zahlen.
 
